# FastAPI-to-do-app

./: .env.template  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 2025_11_24_2148-ad8ca727c235_create_users_table.py  2025_11_29_1311-1814d7a11291_initial_migration.py
app/: main.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  users.py
app/api/api_v1/crud/: users.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  user.py
app/tasks/: views.py
app/users/: crud.py  schemas.py  views.py
