[tool.poetry]
name = "fastapi-to-do-app"
version = "0.1.0"
description = ""
authors = ["gr1zee"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.12.4"}
pydantic-settings = "^2.12.0"
black = "^25.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^25.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"